<resources>
    <!--  Authentication screen  -->
    <string name="authentication_username_hint">Username</string>
    <string name="authentication_password_hint">Password</string>
    <string name="authentication_log_in_button">Log In</string>
    <string name="authentication_create_account_button">Create account</string>
    <string name="authentication_forgot_password_button">Forgot password?</string>

    <!--  Create account screen  -->
    <string name="registration_toolbar_title">Create new account</string>
    <string name="registration_username_hint">Username</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_confirm_password_hint">Confirm password</string>
    <string name="registration_create_account_button">Create account</string>
</resources>
