<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wild_sand"
    tools:context=".screen.authentication.AuthenticationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/robins_egg_blue"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameEditText"
                style="@style/RoundedEditTextInput"
                android:layout_marginTop="32dp"
                android:hint="@string/authentication_username_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/RoundedEditTextInput"
                android:layout_marginTop="16dp"
                android:hint="@string/authentication_password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/logInButton"
                style="@style/PlainTextButton.Large"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:enabled="false"
                android:text="@string/authentication_log_in_button" />

            <Button
                android:id="@+id/createAccountButton"
                style="@style/PlainTextButton.Large"
                android:layout_width="match_parent"
                android:text="@string/authentication_create_account_button" />

            <Button
                android:id="@+id/forgotPasswordButton"
                style="@style/PlainTextButton.Regular"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/authentication_forgot_password_button" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
